--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,30 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-15 Fri 14:58]
-| <75>                                                 |          |        |        |       |
-| Headline                                             | Time     |        |        |     % |
-|------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *186:29* |        |        | 100.0 |
-|------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 186:29   |        |        | 100.0 |
-| Active                                               |          | 186:29 |        | 100.0 |
-| Edit release notes for previous sprint               |          |        |   2:03 |   1.1 |
-| Sprint and product backlog grooming                  |          |        |   4:55 |   2.6 |
-| Work on MASD theory                                  |          |        | 113:38 |  60.9 |
-| Rename models to fit MASD architecture               |          |        |   4:56 |   2.6 |
-| Read up on framework and API design                  |          |        |   0:57 |   0.5 |
-| Analyse the state of the mess of refactors           |          |        |   6:27 |   3.5 |
-| Create the =orchestration= model                     |          |        |   4:15 |   2.3 |
-| Update vcpkg across all operative systems            |          |        |   4:35 |   2.5 |
-| Update C# reference models to latest dogen           |          |        |   0:42 |   0.4 |
-| Convert the utility model into a regular dogen model |          |        |   7:27 |   4.0 |
-| Improve support for clang-cl builds                  |          |        |   2:02 |   1.1 |
-| Move generation properties into meta-data            |          |        |   9:26 |   5.1 |
-| Great meta-data rename                               |          |        |   4:54 |   2.6 |
-| Create a single binary for all of dogen              |          |        |  18:17 |   9.8 |
-| Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.4 |
-| Fix clang-cl warnings                                |          |        |   1:09 |   0.6 |
+#+CAPTION: Clock summary at [2019-02-15 Fri 16:21]
+| <75>                                                      |          |        |        |       |
+| Headline                                                  | Time     |        |        |     % |
+|-----------------------------------------------------------+----------+--------+--------+-------|
+| *Total time*                                              | *187:08* |        |        | 100.0 |
+|-----------------------------------------------------------+----------+--------+--------+-------|
+| Stories                                                   | 187:08   |        |        | 100.0 |
+| Active                                                    |          | 187:08 |        | 100.0 |
+| Edit release notes for previous sprint                    |          |        |   2:03 |   1.1 |
+| Sprint and product backlog grooming                       |          |        |   4:55 |   2.6 |
+| Work on MASD theory                                       |          |        | 113:38 |  60.7 |
+| Rename models to fit MASD architecture                    |          |        |   4:56 |   2.6 |
+| Read up on framework and API design                       |          |        |   0:57 |   0.5 |
+| Analyse the state of the mess of refactors                |          |        |   6:27 |   3.4 |
+| Create the =orchestration= model                          |          |        |   4:15 |   2.3 |
+| Update vcpkg across all operative systems                 |          |        |   4:35 |   2.4 |
+| Update C# reference models to latest dogen                |          |        |   0:42 |   0.4 |
+| Convert the utility model into a regular dogen model      |          |        |   7:27 |   4.0 |
+| Improve support for clang-cl builds                       |          |        |   2:02 |   1.1 |
+| Move generation properties into meta-data                 |          |        |   9:26 |   5.0 |
+| References to types in top-level namespace do not resolve |          |        |   0:15 |   0.1 |
+| Great meta-data rename                                    |          |        |   4:54 |   2.6 |
+| Create a single binary for all of dogen                   |          |        |  18:17 |   9.8 |
+| Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
+| Fix clang-cl warnings                                     |          |        |   1:33 |   0.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -608,6 +609,17 @@ Notes:
 
 - rename "yarn." transforms in log to "masd." - done.
 
+*** COMPLETED References to types in top-level namespace do not resolve :story:
+    CLOSED: [2019-02-15 Fri 16:16]
+    :LOGBOOK:
+    CLOCK: [2019-02-15 Fri 16:01]--[2019-02-15 Fri 16:16] =>  0:15
+    :END:
+
+When referring to =weaving_styles= defined in =masd::dogen= from
+within =masd::dogen::cli=, dogen failed to resolve the
+type. Qualifying it as =masd::dogen::weaving_styles= solved the
+problem. Resolver is not walking up the path correctly.
+
 *** STARTED Great meta-data rename                                    :story:
     :LOGBOOK:
     CLOCK: [2018-11-26 Mon 10:01]--[2018-11-26 Mon 11:02] =>  1:01
@@ -762,6 +774,7 @@ Problems:
 
 *** STARTED Fix clang-cl warnings                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-02-15 Fri 15:20]--[2019-02-15 Fri 15:44] =>  0:24
     CLOCK: [2019-02-15 Fri 14:21]--[2019-02-15 Fri 14:59] =>  0:38
     CLOCK: [2019-02-14 Thu 11:47]--[2019-02-14 Thu 12:18] =>  0:31
     :END:
@@ -782,7 +795,7 @@ Notes:
 - Updated issue on CDash parsing problems for clang-cl: [[https://github.com/Kitware/CDash/issues/733][Parsing of
   errors and warnings from clang-cl]]
 
-*** Use tracing options in existing code
+*** Use tracing options in existing code                              :story:
 
 Tasks:
 
@@ -792,13 +805,6 @@ Tasks:
 - update knitter to generate tracing options.
 - delete probing options from configuration.
 - delete probing options from tracer.
-
-*** References to types in top-level namespace do not resolve         :story:
-
-When referring to =weaving_styles= defined in =masd::dogen= from
-within =masd::dogen::cli=, dogen failed to resolve the
-type. Qualifying it as =masd::dogen::weaving_styles= solved the
-problem. Resolver is not walking up the path correctly.
 
 *** Rename the =transform= method to =apply=                          :story:
 
