--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,31 +13,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-15 Fri 17:13]
+#+CAPTION: Clock summary at [2019-02-15 Fri 17:52]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *188:10* |        |        | 100.0 |
+| *Total time*                                              | *188:47* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 188:10   |        |        | 100.0 |
-| Active                                                    |          | 188:10 |        | 100.0 |
+| Stories                                                   | 188:47   |        |        | 100.0 |
+| Active                                                    |          | 188:47 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.1 |
-| Sprint and product backlog grooming                       |          |        |   4:55 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  60.4 |
+| Sprint and product backlog grooming                       |          |        |   5:02 |   2.7 |
+| Work on MASD theory                                       |          |        | 113:38 |  60.2 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.6 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.4 |
 | Create the =orchestration= model                          |          |        |   4:15 |   2.3 |
 | Update vcpkg across all operative systems                 |          |        |   4:35 |   2.4 |
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.4 |
-| Convert the utility model into a regular dogen model      |          |        |   7:27 |   4.0 |
+| Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.9 |
 | Improve support for clang-cl builds                       |          |        |   2:02 |   1.1 |
 | Move generation properties into meta-data                 |          |        |   9:26 |   5.0 |
-| References to types in top-level namespace do not resolve |          |        |   0:15 |   0.1 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.6 |
 | Create a single binary for all of dogen                   |          |        |  19:02 |  10.1 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   1:50 |   1.0 |
+| Use tracing options in existing code                      |          |        |   0:30 |   0.3 |
+| References to types in top-level namespace do not resolve |          |        |   0:15 |   0.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -143,6 +144,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
      :LOGBOOK:
+     CLOCK: [2019-02-15 Fri 17:45]--[2019-02-15 Fri 17:52] =>  0:07
      CLOCK: [2019-02-15 Fri 11:46]--[2019-02-15 Fri 11:55] =>  0:09
      CLOCK: [2019-02-15 Fri 09:50]--[2019-02-15 Fri 09:53] =>  0:03
      CLOCK: [2019-02-13 Wed 10:42]--[2019-02-13 Wed 11:04] =>  0:22
@@ -609,17 +611,6 @@ Notes:
 
 - rename "yarn." transforms in log to "masd." - done.
 
-*** COMPLETED References to types in top-level namespace do not resolve :story:
-    CLOSED: [2019-02-15 Fri 16:16]
-    :LOGBOOK:
-    CLOCK: [2019-02-15 Fri 16:01]--[2019-02-15 Fri 16:16] =>  0:15
-    :END:
-
-When referring to =weaving_styles= defined in =masd::dogen= from
-within =masd::dogen::cli=, dogen failed to resolve the
-type. Qualifying it as =masd::dogen::weaving_styles= solved the
-problem. Resolver is not walking up the path correctly.
-
 *** STARTED Great meta-data rename                                    :story:
     :LOGBOOK:
     CLOCK: [2018-11-26 Mon 10:01]--[2018-11-26 Mon 11:02] =>  1:01
@@ -796,16 +787,39 @@ Notes:
 - Updated issue on CDash parsing problems for clang-cl: [[https://github.com/Kitware/CDash/issues/733][Parsing of
   errors and warnings from clang-cl]]
 
-*** Use tracing options in existing code                              :story:
+*** STARTED Use tracing options in existing code                      :story:
+    :LOGBOOK:
+    CLOCK: [2019-02-15 Fri 17:14]--[2019-02-15 Fri 17:44] =>  0:30
+    :END:
 
 Tasks:
 
+- read the byproduct directory and supply it to probing somehow.
 - add dependency to API from tracing.
 - implement a tracer constructor that takes in tracing configuration.
 - add tracing configuration to coding options.
 - update knitter to generate tracing options.
 - delete probing options from configuration.
 - delete probing options from tracer.
+
+*** STARTED References to types in top-level namespace do not resolve :story:
+    :LOGBOOK:
+    CLOCK: [2019-02-15 Fri 16:01]--[2019-02-15 Fri 16:16] =>  0:15
+    :END:
+
+When referring to =weaving_styles= defined in =masd::dogen= from
+within =masd::dogen::cli=, dogen failed to resolve the
+type. Qualifying it as =masd::dogen::weaving_styles= solved the
+problem. Resolver is not walking up the path correctly.
+
+We also need to take into account the case where the name is used
+within a inner module.
+
+*** Disable global hashing on coding                                  :story:
+
+We are generating hash for all types at present in coding but we only
+need it for two types: name and location. Try to switch it off
+globally and on just for those two types.
 
 *** Rename the =transform= method to =apply=                          :story:
 
