--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,33 +13,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-18 Mon 15:04]
+#+CAPTION: Clock summary at [2019-02-18 Mon 17:56]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *191:20* |        |        | 100.0 |
+| *Total time*                                              | *194:23* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 191:20   |        |        | 100.0 |
-| Active                                                    |          | 191:20 |        | 100.0 |
+| Stories                                                   | 194:23   |        |        | 100.0 |
+| Active                                                    |          | 194:23 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.1 |
 | Sprint and product backlog grooming                       |          |        |   5:02 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  59.4 |
-| Rename models to fit MASD architecture                    |          |        |   4:56 |   2.6 |
+| Work on MASD theory                                       |          |        | 113:38 |  58.5 |
+| Rename models to fit MASD architecture                    |          |        |   4:56 |   2.5 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
-| Analyse the state of the mess of refactors                |          |        |   6:27 |   3.4 |
+| Analyse the state of the mess of refactors                |          |        |   6:27 |   3.3 |
 | Create the =orchestration= model                          |          |        |   4:15 |   2.2 |
 | Update vcpkg across all operative systems                 |          |        |   4:35 |   2.4 |
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.4 |
-| Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.9 |
-| Improve support for clang-cl builds                       |          |        |   2:02 |   1.1 |
+| Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.8 |
+| Improve support for clang-cl builds                       |          |        |   2:02 |   1.0 |
 | Move generation properties into meta-data                 |          |        |   9:26 |   4.9 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
-| Great meta-data rename                                    |          |        |   4:54 |   2.6 |
-| Create a single binary for all of dogen                   |          |        |  19:02 |   9.9 |
+| Great meta-data rename                                    |          |        |   4:54 |   2.5 |
+| Create a single binary for all of dogen                   |          |        |  19:02 |   9.8 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
-| Fix clang-cl warnings                                     |          |        |   1:50 |   1.0 |
+| Fix clang-cl warnings                                     |          |        |   4:46 |   2.5 |
 | Use tracing options in existing code                      |          |        |   0:42 |   0.4 |
-| References to types in top-level namespace do not resolve |          |        |   0:15 |   0.1 |
+| References to types in top-level namespace do not resolve |          |        |   0:22 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -779,6 +779,7 @@ Problems:
 
 *** STARTED Fix clang-cl warnings                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-02-18 Mon 14:52]--[2019-02-18 Mon 17:48] =>  2:56
     CLOCK: [2019-02-15 Fri 15:20]--[2019-02-15 Fri 16:01] =>  0:41
     CLOCK: [2019-02-15 Fri 14:21]--[2019-02-15 Fri 14:59] =>  0:38
     CLOCK: [2019-02-14 Thu 11:47]--[2019-02-14 Thu 12:18] =>  0:31
@@ -799,6 +800,8 @@ Notes:
   reported by cdash,
 - Updated issue on CDash parsing problems for clang-cl: [[https://github.com/Kitware/CDash/issues/733][Parsing of
   errors and warnings from clang-cl]]
+- Sent email to clang mailinglist: [[http://lists.llvm.org/pipermail/cfe-dev/2019-February/061326.html][Clang-cl - errors and warning
+  messages slightly different from MSVC]]
 
 *** STARTED Use tracing options in existing code                      :story:
     :LOGBOOK:
@@ -818,6 +821,7 @@ Tasks:
 
 *** STARTED References to types in top-level namespace do not resolve :story:
     :LOGBOOK:
+    CLOCK: [2019-02-18 Mon 17:49]--[2019-02-18 Mon 17:56] =>  0:07
     CLOCK: [2019-02-15 Fri 16:01]--[2019-02-15 Fri 16:16] =>  0:15
     :END:
 
@@ -828,6 +832,21 @@ problem. Resolver is not walking up the path correctly.
 
 We also need to take into account the case where the name is used
 within a inner module.
+
+*** Model references are not transitive                               :story:
+
+For some reason we do not seem to be following references of
+referenced models. We should load them automatically, now that they
+are part of the meta-data. However, the =yarn.json= model breaks when
+we remove the reference to annotation even though it does not use this
+model directly and =yarn= is referencing it correctly.
+
+The reason why is that we load up references to all intermediate
+models, but then on merge we only take target references. What we
+really need to do is to combine the reference containers on merge. For
+this we need to create a method that loops through the map and inserts
+all keys which have not yet been inserted. Something like "merge
+references".
 
 *** Disable global hashing on coding                                  :story:
 
