--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,30 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-19 Tue 13:16]
+#+CAPTION: Clock summary at [2019-02-19 Tue 15:46]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *197:45* |        |        | 100.0 |
+| *Total time*                                              | *199:19* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 197:45   |        |        | 100.0 |
-| Active                                                    |          | 197:45 |        | 100.0 |
+| Stories                                                   | 199:19   |        |        | 100.0 |
+| Active                                                    |          | 199:19 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  57.5 |
+| Work on MASD theory                                       |          |        | 113:38 |  57.0 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.5 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
-| Analyse the state of the mess of refactors                |          |        |   6:27 |   3.3 |
+| Analyse the state of the mess of refactors                |          |        |   6:27 |   3.2 |
 | Create the =orchestration= model                          |          |        |   4:15 |   2.1 |
 | Update vcpkg across all operative systems                 |          |        |   4:35 |   2.3 |
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.4 |
-| Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.8 |
+| Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.7 |
 | Improve support for clang-cl builds                       |          |        |   2:02 |   1.0 |
-| Move generation properties into meta-data                 |          |        |   9:26 |   4.8 |
+| Move generation properties into meta-data                 |          |        |   9:26 |   4.7 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.5 |
-| Create a single binary for all of dogen                   |          |        |  20:47 |  10.5 |
+| Create a single binary for all of dogen                   |          |        |  22:21 |  11.2 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.6 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
@@ -712,6 +712,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-19 Tue 14:12]--[2019-02-19 Tue 15:46] =>  1:34
     CLOCK: [2019-02-19 Tue 11:19]--[2019-02-19 Tue 13:04] =>  1:45
     CLOCK: [2019-02-15 Fri 16:28]--[2019-02-15 Fri 17:13] =>  0:45
     CLOCK: [2019-02-15 Fri 11:24]--[2019-02-15 Fri 11:45] =>  0:21
