--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,32 +13,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-19 Tue 16:25]
+#+CAPTION: Clock summary at [2019-02-20 Wed 10:56]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *199:57* |        |        | 100.0 |
+| *Total time*                                              | *201:07* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 199:57   |        |        | 100.0 |
-| Active                                                    |          | 199:57 |        | 100.0 |
+| Stories                                                   | 201:07   |        |        | 100.0 |
+| Active                                                    |          | 201:07 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  56.8 |
+| Work on MASD theory                                       |          |        | 113:38 |  56.5 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.5 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.2 |
 | Create the =orchestration= model                          |          |        |   4:15 |   2.1 |
 | Update vcpkg across all operative systems                 |          |        |   4:35 |   2.3 |
-| Update C# reference models to latest dogen                |          |        |   0:42 |   0.4 |
+| Update C# reference models to latest dogen                |          |        |   0:42 |   0.3 |
 | Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.7 |
 | Improve support for clang-cl builds                       |          |        |   2:02 |   1.0 |
 | Move generation properties into meta-data                 |          |        |   9:26 |   4.7 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.2 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
-| Great meta-data rename                                    |          |        |   4:54 |   2.5 |
-| Create a single binary for all of dogen                   |          |        |  22:59 |  11.5 |
+| Create a colour palette test model                        |          |        |   0:54 |   0.4 |
+| Great meta-data rename                                    |          |        |   4:54 |   2.4 |
+| Create a single binary for all of dogen                   |          |        |  23:15 |  11.6 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
-| Fix clang-cl warnings                                     |          |        |   5:07 |   2.6 |
+| Fix clang-cl warnings                                     |          |        |   5:07 |   2.5 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
 | Model references are not transitive                       |          |        |   0:21 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -642,6 +643,23 @@ problem. Resolver is not walking up the path correctly.
 We also need to take into account the case where the name is used
 within a inner module.
 
+*** COMPLETED Create a colour palette test model                      :story:
+    CLOSED: [2019-02-20 Wed 10:56]
+    :LOGBOOK:
+    CLOCK: [2019-02-20 Wed 10:02]--[2019-02-20 Wed 10:56] =>  0:54
+    :END:
+
+Thus far we have been updating the colour palette in a ad-hoc
+fashion. The problem is, since we don't have a model that uses all
+colours, we do not know how they look together. The idea with colours
+is that we can look at a model and quickly find meta-information; if
+we are using the same colours with multiple meanings, the approach no
+longer works.
+
+Create a simple "colour palette" test model that exercises all
+stereotypes which are expressed as colours and ensure there is some
+kind of useful pattern.
+
 *** STARTED Great meta-data rename                                    :story:
     :LOGBOOK:
     CLOCK: [2018-11-26 Mon 10:01]--[2018-11-26 Mon 11:02] =>  1:01
@@ -712,6 +730,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-20 Wed 09:45]--[2019-02-20 Wed 10:01] =>  0:31
     CLOCK: [2019-02-19 Tue 15:47]--[2019-02-19 Tue 16:25] =>  0:38
     CLOCK: [2019-02-19 Tue 14:12]--[2019-02-19 Tue 15:46] =>  1:34
     CLOCK: [2019-02-19 Tue 11:19]--[2019-02-19 Tue 13:04] =>  1:45
